--- a/server/pom.xml
+++ b/server/pom.xml
@@ -930,6 +930,14 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>org.candlepin</groupId>
+      <artifactId>candlepin-common</artifactId>
+      <version>2.0.0</version>
+      <classifier>complete</classifier>
+      <type>tar.gz</type>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
