--- a/gutterball/pom.xml
+++ b/gutterball/pom.xml
@@ -61,6 +61,7 @@
     <com.fasterxml.jackson.module-jackson-module-jsonSchema.version>2.3.0</com.fasterxml.jackson.module-jackson-module-jsonSchema.version>
     <com.fasterxml.jackson.module-jackson-module-jaxb-annotations.version>2.3.0</com.fasterxml.jackson.module-jackson-module-jaxb-annotations.version>
     <com.fasterxml.jackson.datatype-jackson-datatype-hibernate4.version>2.3.0</com.fasterxml.jackson.datatype-jackson-datatype-hibernate4.version>
+    <org.liquibase-liquibase-core.version>3.1.0</org.liquibase-liquibase-core.version>
     <ch.qos.logback-logback-core.version>1.0.13</ch.qos.logback-logback-core.version>
     <ch.qos.logback-logback-classic.version>1.0.13</ch.qos.logback-logback-classic.version>
     <org.slf4j-jcl-over-slf4j.version>1.7.5</org.slf4j-jcl-over-slf4j.version>
@@ -583,6 +584,17 @@
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-hibernate4</artifactId>
       <version>${com.fasterxml.jackson.datatype-jackson-datatype-hibernate4.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.liquibase</groupId>
+      <artifactId>liquibase-core</artifactId>
+      <version>${org.liquibase-liquibase-core.version}</version>
       <exclusions>
         <exclusion>
           <groupId>*</groupId>
