Update tito config for new katello-koji tags.

--- a/rel-eng/releasers.conf
+++ b/rel-eng/releasers.conf
@@ -27,7 +27,7 @@ branches = candlepin-1-rhel-6 candlepin-1-rhel-7
 
 [katello-koji]
 releaser = tito.release.KojiReleaser
-autobuild_tags = katello-thirdparty-candlepin-rhel6 katello-thirdparty-candlepin-rhel7
+autobuild_tags = candlepin-nightly-rhel6 candlepin-nightly-rhel7
 
 [mead]
 releaser = tito.release.DistGitMeadReleaser
