Several updates & fixes to the Docker images and build scripts
- /bin/deploy, and /bin/gen-certs no longer use sudo if it's not
  necessary or not available
- Docker images are now based on CentOS 7... again
- Default docker container command now invokes cp-test with the
  correct arguments

--- a/docker/candlepin-base/Dockerfile
+++ b/docker/candlepin-base/Dockerfile
@@ -1,4 +1,4 @@
-FROM fedora:22
+FROM centos:7
 MAINTAINER Devan Goodwin <dgoodwin@redhat.com>
 
 ENV LANG en_US.UTF-8
@@ -16,4 +16,4 @@ ADD cp-test /usr/bin/
 
 EXPOSE 8443 22
 
-CMD ["/usr/bin/cp-test", "-u"]
+CMD ["/usr/bin/cp-test", "-t", "-u", "-r"]
