--- a/docker/candlepin-postgresql/Dockerfile
+++ b/docker/candlepin-postgresql/Dockerfile
@@ -6,4 +6,4 @@ ADD postgresql-setup /root/
 ADD setup-postgresql.sh /root/
 RUN /bin/bash /root/setup-postgresql.sh
 
-CMD ["/usr/bin/cp-test", "-r"]
+CMD ["/usr/bin/cp-test", "-t", "-u", "-r"]
