mvn build subservice too, henceforth

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>common</module>
         <module>gutterball</module>
         <module>server</module>
+        <module>subservice</module>
     </modules>
 
     <properties>
