Deprecate 'rhel' releaser since it is not MEAD based.

--- a/rel-eng/releasers.conf
+++ b/rel-eng/releasers.conf
@@ -21,9 +21,12 @@ builder.mock_args = -D "reqcpdeps 1"
 rsync = fedorapeople.org:/srv/repos/candlepin/candlepin/epel-6Server/x86_64/ fedorapeople.org:/srv/repos/candlepin/candlepin/epel-6/x86_64/
 srpm_disttag = .el6
 
-[rhel]
-releaser = tito.release.DistGitReleaser
-branches = candlepin-1-rhel-6 candlepin-1-rhel-7
+# This is an old releaser that is not appropriate for MEAD based
+# builds.  It should only be used for performing builds for old
+# versions or hotfixes.
+# [rhel]
+# releaser = tito.release.DistGitReleaser
+# branches = candlepin-1-rhel-6 candlepin-1-rhel-7
 
 [katello-koji]
 releaser = tito.release.KojiReleaser
